--- a/.github/workflows/handle_metadata.yml
+++ b/.github/workflows/handle_metadata.yml
@@ -54,11 +54,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           # Install core dependencies first
-          python -m pip install torch torchvision numpy pandas xarray scipy scikit-learn matplotlib seaborn pyyaml
           # Install specific branch of brainscore-core
           python -m pip install git+https://github.com/brain-score/core.git@plugin_metadata
           # Install vision with no-deps since dependencies are already installed
-          python -m pip install --no-deps ".[test]"
+          python -m pip install ".[test]"
           
       - name: Configure Git
         run: |
